# iaintsosure

./: .gitignore  LICENSE  README.md
posts/P1/: README.md
posts/P2/: REDAME.md
posts/P3/: README.md  p3.ipynb  pyproject.toml
posts/P4/: README.md  custom_estimators.py  p4.ipynb  params.py  plotting.py  pyproject.toml  test_estimators.py  utils.py
posts/P6/: .gitignore  README.md  lotka_volterra_model.ipynb  lotka_volterra_model.stan  lotka_volterra_model_v2.stan  pyproject.toml
posts/P6/src/: utils.py
posts/P6/src/abm/: agents.py  app.py  batch_run.py  bayes_opt.py  model.py
posts/P6/src/estimation/: bayesian.py  discrete.py  evolution.py
