[project]
name = "l2c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.1.0",
    "arviz>=1.1.0",
    "arviz-plots[matplotlib]>=1.1.0",
    "arviz-stats[xarray]>=1.1.0",
    "ax-platform>=1.2.4",
    "cmdstanpy[all]>=1.3.0",
    "ipykernel>=7.2.0",
    "mesa>=3.5.1",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "plotnine>=0.15.4",
    "pyarrow>=24.0.0",
    "solara>=1.57.4",
    "tslearn>=0.8.1",
    "vegafusion[embed]>=2.0.3",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }] # Include this if you plan to use torchvision
